- added writing for pip files
- reorganized computation of scores in cut filtering: instead of the computation at the time of addition, scores are now only computed w.r.t. the current LP solution and when cut filtering is performed; one can now fill the cut storage with cuts that were separated for different solutions


SCIP version 2.0.2
==================

fixed bugs:
- fixed bug in heur_subnlp.c where constraints forbidding variable fixations where added if a cutoff was used in the subproblem
- fixed wrong assert in plugins that use SCIPcopy()
- fixed wrong (neg)cliquepartition check in cons_knapsack.c when deleting a coefficient
- fixed memory leak in SoPlex LP interface when requesting an unbounded solution
- fixed memory leak in SoPlex LP interface when solving with LP scaling
- fixed memory leaks in reader of TSP example 
- fixed bug while after restarting possible the aggregted variables were not removed in setppc constraints
- fixed various small bugs in nonlinear expressions code
- fixed bug in DINS heuristic that occured when the incumbent solution value is outside the variable's current domain 
- fixed bug in DINS w.r.t. column generation
- fixed bug in heur_subnlp.c where wrong constraints forbidding variable fixations where added in case of general integers
- fixed bug in var.c where a possible multiaggregation was resolved to an aggregation but the variables types were not checked to prefer more general types for aggregating; possible memory loss removed
- fixed behavior of LNS heuristics when the subproblem aborts: continue in optimized mode, stop in debug mode
- fixed bug in prop_vbounds.c w.r.t. infinity lower and upper bound of variable bound variables
- fixed make/make.project 

performance improvements:
- fasten propagation in cons_knapsack.c due to negated clique partitions
- recalculating only needed partitions in cons_knapsack.c, not always both